--- a/index.html
+++ b/index.html
@@ -44,23 +44,32 @@
 	</div><!--/.hover-->
 		
 	</div><!--/.imagens3-->
-	</div> <!--/.fotos-->
-	<div class="clear"></div>
 	
+	<div class="clear"></div>
+
 	<div class="imagens4">
 	<div class="hover"> 
 	<div class="texto">
-	<a href= "https://luisavilhena.github.io/calculadorajs.github.io/" target= "_blank" ><p><p><p><p>TESTE-4</a>
+	<a href= "https://luisavilhena.github.io/calculadorajs.github.io/"  target= "_blank" ><p><p><p><p>TESTE-4</a>
 	</div><!--/.texto-->
-	</div><!--/.hover-->	
+	</div><!--/.hover-->
+		
 	</div><!--/.imagens4-->
 	</div> <!--/.fotos-->
+	<div class="clear"></div>
 
 	<div class="cha"></div>
 	<div class="email">
 		<h2> luisavilhena@gmail.com </h2>
 		<h3> 2017 - todos os direitos reservados </h3>
 	</div>
+
+		<div class="uma-div">
+				<link rel="stylesheet" type="text/css"  media= "screen and (min-width 100px)" href= "small.css">
+				<link rel="stylesheet" type="text/css" media= "screen and (min-width 1000px)" href= "medium.css">
+				<link rel="stylesheet" type="text/css" media= "screen and (min-width 1300px)" href=  "large.css">
+			</div>
+
 </div> <!--/.borda-->
 </body>
 </html>
