--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="chuva"></div>
 	<div class="mais">
 		<h1>Projetos</h1>
-		<h4> Uma seleçao de estudos HTML/CSS </h4>
+		<h4> Uma seleçao de estudos HTML/CSS/JavaScript</h4>
 	</div>
 <div class="fotos">
 	<div class= "imagens">
