--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<ul> 
 	<li> Graduação: Artes Cênicas (UNICAMP / 2009-12)</li>
 	<li> Mestrado: Estudos Culturais (USP / 2017-19)</li>
+	<li> Cursos de Programação: Women Dev Summit/ Khan Academy/ Codeacademy/ Minas Programam (2017) </li>
 	</ul>
 
 	<div class="chuva"></div>
