--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li> Cursos de Programação: Women Dev Summit/ Khan Academy/ Codeacademy/ Minas Programam (2017) </li>
 	<li> Graduação: Artes Cênicas (UNICAMP / 2009-12)</li>
 	<li> Mestrado: Estudos Culturais (USP / 2017-19)</li>
+	<li> Graduação: Tecnologia em Sistemas para Internet (2018)</li>
 	
 	</ul>
 
