index facebook/twitter

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <head>
 	<title>Luisa Vilhena</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta property="og:site_name" content="Luisa Vilhena - Portfólio de Estudos">
+    <meta property="og:title" content="Luisa Vilhena - Portfólio de Estudos">
+    <meta property="og:url" content="https://luisavilhena.github.io/luisa-/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://luisavilhena.github.io/luisa-/share.jpg">
+    <meta name="twitter:title" content="Luisa Vilhena - Portfólio de Estudos">
+    <meta name="twitter:image" content="https://luisavilhena.github.io/luisa-/share.jpg">
+    <meta name="twitter:url" content="https://luisavilhena.github.io/luisa-/">
+    <meta name="twitter:card" content="summary">
+    <meta name="description" content="Luisa Vilhena - Portfólio de Estudos">
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -15,6 +26,7 @@
 	<li> Graduação: Artes Cênicas (UNICAMP / 2009-12)</li>
 	<li> Mestrado: Estudos Culturais (USP / 2017-19)</li>
 	<li> Graduação: Tecnologia em Sistemas para Internet (2018)</li>
+
 	
 	</ul>
 
