--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="twitter:url" content="https://luisavilhena.github.io/luisa-/">
     <meta name="twitter:card" content="summary">
     <meta name="description" content="Luisa Vilhena - Portfólio de Estudos">
+    <meta property="og:image:secure_url" content=https://luisavilhena.github.io/luisa-/share.jpg" />
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
