adicionar dois tamplates testes

--- a/index.html
+++ b/index.html
@@ -5,87 +5,137 @@
 	<title>Luisa Vilhena</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta property="og:site_name" content="Luisa Vilhena - Portfólio de Estudos">
-    <meta property="og:title" content="Luisa Vilhena - Portfólio de Estudos">
-    <meta property="og:url" content="https://luisavilhena.github.io/luisa-/">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://luisavilhena.github.io/luisa-/share.jpg">
-    <meta name="twitter:title" content="Luisa Vilhena - Portfólio de Estudos">
-    <meta name="twitter:image" content="https://luisavilhena.github.io/luisa-/share.jpg">
-    <meta name="twitter:url" content="https://luisavilhena.github.io/luisa-/">
-    <meta name="twitter:card" content="summary">
-    <meta name="description" content="Luisa Vilhena - Portfólio de Estudos">
-    <meta property="og:image:secure_url" content=https://luisavilhena.github.io/luisa-/share.jpg" />
+	<meta property="og:site_name" content="Luisa Vilhena - Portfólio de Estudos">
+	<meta property="og:title" content="Luisa Vilhena - Portfólio de Estudos">
+	<meta property="og:url" content="https://luisavilhena.github.io/luisa-/">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://luisavilhena.github.io/luisa-/share.jpg">
+	<meta name="twitter:title" content="Luisa Vilhena - Portfólio de Estudos">
+	<meta name="twitter:image" content="https://luisavilhena.github.io/luisa-/share.jpg">
+	<meta name="twitter:url" content="https://luisavilhena.github.io/luisa-/">
+	<meta name="twitter:card" content="summary">
+	<meta name="description" content="Luisa Vilhena - Portfólio de Estudos">
+	<meta property="og:image:secure_url" content=https://luisavilhena.github.io/luisa-/share.jpg" />
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<div class="borda">
-	<h1>Luisa Vilhena</h1>
-	<h2>Com mais de 12 anos em experiências profissionais artísticas, descobri um novo interesse que me atravessou tanto quanto a arte. A programação. Iniciei apenas como curiosa, mas quanto mais estudava, mais me interessava. Agora me encontro   em fase inicial de estudos, busco me aprofundar, melhorar e me profissionalizar na carreira.  </h2>
-	<ul> 
-        <li> Cursos de Programação: Women Dev Summit/ Khan Academy/ Codeacademy/ Minas Programam (2017) </li>
-	<li> Graduação: Artes Cênicas (UNICAMP / 2009-12)</li>
-	<li> Mestrado: Estudos Culturais (USP / 2017-19)</li>
-	<li> Graduação: Tecnologia em Sistemas para Internet (2018)</li>
+	<div class="borda">
+		<div class="apresentar">
+		<h1>Luisa Vilhena</h1>
+		<h2>Com mais de 12 anos em experiências profissionais artísticas, descobri um novo interesse que me atravessou tanto quanto a arte. A programação. Iniciei apenas como curiosa, mas quanto mais estudava, mais me interessava. Agora  busco me aprofundar no assunto, melhorar e profissionalizar minha carreira.  </h2>
+		<br/> 
+		<ul> 
 
-	
-	</ul>
+			<li> Graduação: Tecnologia em Sistemas para Internet (2018)</li>
+			<li> Graduação: Artes Cênicas (UNICAMP / 2009-12)</li>
+			<li> Mestrado: Estudos Culturais (USP / 2017-19)</li>
+			<li> Cursos de Programação: Women Dev Summit/ Khan Academy/ Codeacademy/ Minas Programam (2017) </li>
 
-	<div class="chuva"></div>
-	<div class="mais">
-		<h1>Projetos</h1>
-		<h4> HTML/CSS/JavaScript</h4>
-	</div>
-<div class="fotos">
-	<div class= "imagens">
-	<div class="hover"> 
-	<div class="texto">
-		<a href= "https://luisavilhena.github.io/teste/" target= "_blank"><p><p><p><p>TESTE-1</a>
-		</div><!--/.texto-->
-		</div><!--/.hover-->
-	</div> <!--/.imagens-->
+		</ul>
+		</div> <!--apresentar-->
 
-	<div class="imagens2">
-	<div class="hover"> 
-	<div class="texto">
-		<a href= "https://luisavilhena.github.io/vivilhena.github.io/index.html" target= "_blank"><p><p><p><p>TESTE-2</a>
-		</div><!--/.texto-->
-		</div><!--/.hover-->
-	</div> <!--/.imagens2-->
-	<div class="imagens3">
-	<div class="hover"> 
-	<div class="texto">
-	<a href= "https://luisavilhena.github.io/cultural/" target= "_blank" ><p><p><p><p>TESTE-3</a>
-	</div><!--/.texto-->
-	</div><!--/.hover-->
-		
-	</div><!--/.imagens3-->
-	
-	<div class="clear"></div>
+		<div class="chuva"></div>
+		<div class="mais">
+			<h3>Projetos</h3>
+			<h4> HTML/CSS/JavaScript</h4>
+		</div>
+		<div class="fotos">
 
-	<div class="imagens4">
-	<div class="hover"> 
-	<div class="texto">
-	<a href= "https://luisavilhena.github.io/calculadorajs.github.io/"  target= "_blank" ><p><p><p><p>TESTE-4</a>
-	</div><!--/.texto-->
-	</div><!--/.hover-->
-		
-	</div><!--/.imagens4-->
+			<div class= "imagens">
+				<a href= "https://luisavilhena.github.io/teste/" target= "_blank">
+
+					<div class="hover"> 
+						<div class="texto">
+							<h3>Template: Teste 1</h3>
+
+						</div><!--/.texto-->
+					</div><!--/.hover-->
+				</a>
+			</div> <!--/.imagens-->
+
+			
+
+			<div class="imagens2">
+				<a href= "https://luisavilhena.github.io/vivilhena.github.io/index.html" target= "_blank">
+					<div class="hover"> 
+						<div class="texto">
+							<h3>Site: Teste 2</h3>
+
+						</div><!--/.texto-->
+					</div><!--/.hover-->
+				</a>
+			</div> <!--/.imagens2-->
+			
+
+			
+
+			<div class="imagens3">
+				<a href= "https://luisavilhena.github.io/cultural/" target= "_blank" >
+					<div class="hover"> 
+						<div class="texto">
+							<h3>Template: Teste 3</h3>
+
+
+						</div><!--/.texto-->
+					</div><!--/.hover-->
+				</a>
+			</div><!--/.imagens3-->
+			
+
+			<div class="clear"></div>
+
+			
+
+			<div class="imagens5">
+				<a href= "https://cdn.rawgit.com/luisavilhena/fera.github.io/389ded96/index.html"  target= "_blank" >
+					<div class="hover"> 
+						<div class="texto">
+							<h3>Template: Teste 4</h3>
+
+
+						</div><!--/.texto-->
+					</div><!--/.hover-->
+				</a>
+
+			</div><!--/.imagens5-->
+
+
+			<div class="imagens4">
+				<a href= "https://luisavilhena.github.io/calculadorajs.github.io/"  target= "_blank" >
+					<div class="hover"> 
+						<div class="texto">
+<h3>Calculadora: Teste 5</h3>
+						</div><!--/.texto-->
+					</div><!--/.hover-->
+				</a>
+			</div><!--/.imagens4-->
+
+		</a>
+
+
+		<div class="imagens6">
+			<a href="https://cdn.rawgit.com/luisavilhena/projeto_01/a3c6c823/index.html"  target= "_blank" >
+				<div class="hover"> 
+					<div class="texto">
+<h3>Template: Teste 6</h3>
+					</div><!--/.texto-->
+				</div><!--/.hover-->
+			</a>
+		</div><!--/.imagens6-->
 	</div> <!--/.fotos-->
 	<div class="clear"></div>
+</a>
 
-	<div class="cha"></div>
-	<div class="email">
-		<h2> luisavilhena@gmail.com </h2>
-		<h3> 2017 - todos os direitos reservados </h3>
-	</div>
 
-		<div class="uma-div">
-				<link rel="stylesheet" type="text/css"  media= "screen and (min-width 100px)" href= "small.css">
-				<link rel="stylesheet" type="text/css" media= "screen and (min-width 1000px)" href= "medium.css">
-				<link rel="stylesheet" type="text/css" media= "screen and (min-width 1300px)" href=  "large.css">
-			</div>
 
+<div class="cha"></div>
+<div class="email">
+
+	<a href=mailto:"luisavilhena@gmail.com><p> luisavilhena@gmail.com </p></a>
+	<h3> 2017 - todos os direitos reservados </h3>
+</div>
 </div> <!--/.borda-->
+
+<script src="assets/js/jquery.min.js"></script>
 </body>
 </html>
