--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 		<div class="fotos">
 
 			<div class= "imagens">
-				<a href= "https://luisavilhena.github.io/teste/" target= "_blank">
+				<a href= "https://cdn.rawgit.com/luisavilhena/projeto_01/a3c6c823/index.html" target= "_blank">
 
 					<div class="hover"> 
 						<div class="texto">
-							<h3>Template: Teste 1</h3>
+							<h3>Estudo</h3>
 
 						</div><!--/.texto-->
 					</div><!--/.hover-->
@@ -59,7 +59,7 @@
 				<a href= "https://luisavilhena.github.io/vivilhena.github.io/index.html" target= "_blank">
 					<div class="hover"> 
 						<div class="texto">
-							<h3>Site: Teste 2</h3>
+							<h3>Estudo</h3>
 
 						</div><!--/.texto-->
 					</div><!--/.hover-->
@@ -73,7 +73,7 @@
 				<a href= "https://luisavilhena.github.io/cultural/" target= "_blank" >
 					<div class="hover"> 
 						<div class="texto">
-							<h3>Template: Teste 3</h3>
+							<h3>Estudo</h3>
 
 
 						</div><!--/.texto-->
@@ -90,7 +90,7 @@
 				<a href= "https://cdn.rawgit.com/luisavilhena/fera.github.io/389ded96/index.html"  target= "_blank" >
 					<div class="hover"> 
 						<div class="texto">
-							<h3>Template: Teste 4</h3>
+							<h3>Estudo</h3>
 
 
 						</div><!--/.texto-->
@@ -104,7 +104,7 @@
 				<a href= "https://luisavilhena.github.io/calculadorajs.github.io/"  target= "_blank" >
 					<div class="hover"> 
 						<div class="texto">
-<h3>Calculadora: Teste 5</h3>
+<h3>Estudo</h3>
 						</div><!--/.texto-->
 					</div><!--/.hover-->
 				</a>
@@ -114,10 +114,10 @@
 
 
 		<div class="imagens6">
-			<a href="https://cdn.rawgit.com/luisavilhena/projeto_01/a3c6c823/index.html"  target= "_blank" >
+			<a href=  "https://luisavilhena.github.io/teste/" target= "_blank" >
 				<div class="hover"> 
 					<div class="texto">
-<h3>Template: Teste 6</h3>
+<h3>Estudo</h3>
 					</div><!--/.texto-->
 				</div><!--/.hover-->
 			</a>
