--- a/index.html
+++ b/index.html
@@ -40,7 +40,17 @@
 			<h4> HTML/CSS/JavaScript</h4>
 		</div>
 		<div class="fotos">
-			
+
+			<div class="imagens">
+				<a href= "https://luisavilhena.github.io/" target= "_blank">
+					<div class="hover"> 
+						<div class="texto">
+							<h3>Estudo</h3>
+
+						</div><!--/.texto-->
+					</div><!--/.hover-->
+				</a>
+			</div> <!--/.imagens2-->
 
 			<div class="imagens2">
 				<a href= "https://luisavilhena.github.io/vivilhena.github.io/index.html" target= "_blank">
